--- a/Tensorfllow_Hand_Recog.ipynb
+++ b/Tensorfllow_Hand_Recog.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,48 +238,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_5 (Conv2D)            (None, 253, 141, 50)      850       \n",
+      "conv2d (Conv2D)              (None, 253, 141, 50)      850       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 126, 70, 50)       0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 126, 70, 50)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 124, 68, 100)      45100     \n",
+      "conv2d_1 (Conv2D)            (None, 124, 68, 100)      45100     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 62, 34, 100)       0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 62, 34, 100)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 60, 32, 150)       135150    \n",
+      "conv2d_2 (Conv2D)            (None, 60, 32, 150)       135150    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 30, 16, 150)       0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 30, 16, 150)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 28, 14, 200)       270200    \n",
+      "conv2d_3 (Conv2D)            (None, 28, 14, 200)       270200    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 14, 7, 200)        0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 14, 7, 200)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 13, 6, 300)        240300    \n",
+      "conv2d_4 (Conv2D)            (None, 13, 6, 300)        240300    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 6, 3, 300)         0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 6, 3, 300)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 5400)              0         \n",
+      "flatten (Flatten)            (None, 5400)              0         \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 400)               2160400   \n",
+      "dense (Dense)                (None, 400)               2160400   \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 500)               200500    \n",
+      "dense_1 (Dense)              (None, 500)               200500    \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 600)               300600    \n",
+      "dense_2 (Dense)              (None, 600)               300600    \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 700)               420700    \n",
+      "dense_3 (Dense)              (None, 700)               420700    \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 1)                 701       \n",
+      "dense_4 (Dense)              (None, 1)                 701       \n",
       "=================================================================\n",
       "Total params: 3,774,501\n",
       "Trainable params: 3,774,501\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
